Boton Crear Cuenta Safeti
Se agrego boton crear cuenta en nav bar, boton crear cuenta en carrusel, en servicios se puso la misma liga para crear cuenta y cambio el nombre de botones a crear cuenta, se unifico todo escrito 'Safeti', se agregaron los iconos de redes sociales a seccion de contacto

--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -30,6 +30,19 @@ nav {
           font-size: 15px;
         }
       }
+      button {
+        font-size: 15px;
+        font-weight: bold;
+        color: white;
+        background-color: #65a2ea;
+        border: 0;
+        border-radius: 8px;
+        padding: 5px 10px;
+        a {
+          text-decoration: none;
+          color: white;
+        }
+      }
     }
     .contenedorMovil {
       position: relative;
@@ -57,6 +70,19 @@ nav {
           text-align: right;
           display: block;
           margin: 10px 0;
+        }
+        button {
+          font-size: 15px;
+          font-weight: bold;
+          color: white;
+          background-color: #65a2ea;
+          border: 0;
+          border-radius: 8px;
+          padding: 5px 10px;
+          a {
+            text-decoration: none;
+            color: white;
+          }
         }
       }
     }
