--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -36,6 +36,10 @@ a{
       border-radius: 8px;
       padding: 5px 10px;
       margin-top: 30px;
+      a {
+        text-decoration: none;
+        color: white;
+      }
     }
   }
   .imagenCarrusel {
@@ -196,6 +200,18 @@ a{
         margin: 20px 0;
       }
     }
+
+     ul {
+      list-style: none;
+
+      li {
+        cursor: pointer;
+        display: inline-block;
+        margin: 0 15px 0 0;
+        font-size: 20px;
+      }
+    }
+
     .formulario {
       form {
         input,
